Add typed JSON project/select, optional backends, and JMH coverage.
Single-pass schema projection and JSON Pointer select share the custom
scanner; Jackson and experimental simdjson paths fall back when needed.
Includes fixtures, guest benchmarks, and bytecode lowering for constant schemas.

Signed-off-by: The-Alchemist <karl@digital-alchemy.io>